[package]
name = "connectfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures-util = "*"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
kiss3d = "0.35"
ordered-float = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
url = "*"
clap = { version = "3.1.6", features = ["derive"] }
